# twenty-questions

./: .gitignore  Parse.hs  Vagrantfile  notes.org
hs/: .gitignore  Candidate.hs  GHCWrapper.hs  Generator.hs  HoogleWrapper.hs  Interactive.hs  JSON.hs  Parse.hs  RandomizePosition.hs  TestCandidate.hs  TwentyQuestions.cabal  TwentyQuestions.hs  TypeHole.hs  Types.hs  hoogleMerge.hs
presentation/: .gitignore  .notes.org.swp  build.sh  codehint.tex  jungloid.tex  notes.org  oauth.tex  parser.tex  slides.tex  tq-ints.tex
presentation/examples/: codehint  codehint-1  codehint-2  codehint-3  jungloid  oauth-1  oauth-2  tq  tq-1  tq-2
writing/: complexity.md  key-value-store.md  oauth.md  overview.md  parser.md
writing/samples/: oauth.py
wsgi/: tq.py
wsgi/static/: index.html
wsgi/static/css/: main.css
wsgi/static/js/: cards.js  main.js
